- Adjusted settings for AoS. WoD is currently AoS. - Removed pants and long pants from loot groups so they don't spawn as magic items. This is because pants now share the same slot as leggings. - Modified pricing for galleons. - Modified order of execution for house placement, making it more efficient. - House tiles are enabled up to Age of Shadows. More tiles will be enabled later. - Added Tall Straw Hat to the list of craftables. - Removed some packet sending which enabled features newer than AoS.

--- a/099/config/servspecopt.cfg
+++ b/099/config/servspecopt.cfg
@@ -102,7 +102,7 @@ DefaultContainerMaxWeight=250
 # color will show correctly in the tooltips.
 #
 #UOFeatureEnable=0x31a8
-UOFeatureEnable=0x1a8
+UOFeatureEnable=0x28
 
 #
 # HiddenTurnsCount
