--- a/099/pkg/skills/craftingskills/tailoring/cloth_items.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/cloth_items.cfg
@@ -159,6 +159,13 @@ tailoring 0x1715
 	skill	30
 }
 
+tailoring 0x1716
+{
+	Name		tall straw hat
+	material	4
+	skill	35
+}
+
 tailoring 0x1717
 {
 	Name		straw hat
