--- a/099/pkg/skills/craftingskills/tailoring/menu.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/menu.cfg
@@ -56,12 +56,13 @@ Submenu hats1
 	Entry	0x171A	Feathered Hat
 	Entry	0x1713	Floppy Hat
 	Entry	0x1717	Straw Hat
-	Entry	0x1714	Wide_Brim Hat
+	Entry	0x1716	Tall Straw Hat
 }
 
 Submenu hats2
 {
 	show_upgrade_options	0
+	Entry	0x1714	Wide-Brim Hat
 	Entry	0x171B	Tricorne Hat
 	Entry	0x171C	Jester hat
 	Entry	0x1718	Wizard's hat
