--- a/trunk/099/config/servspecopt.cfg
+++ b/trunk/099/config/servspecopt.cfg
@@ -102,7 +102,7 @@ DefaultContainerMaxWeight=250
 # color will show correctly in the tooltips.
 #
 #UOFeatureEnable=0x31a8
-UOFeatureEnable=0x1a8
+UOFeatureEnable=0x28
 
 #
 # HiddenTurnsCount
