--- a/trunk/099/pkg/combat/loot/itemgroups.cfg
+++ b/trunk/099/pkg/combat/loot/itemgroups.cfg
@@ -270,8 +270,10 @@ group clothing
 	item Shirt
 	item Shirt
 	item Shirt
-	item ShortPants
-	item LongPants
+// Removed pants since they now share the same slot as armor.
+// We don't want magic items using such a big armor slot
+//	item ShortPants
+//	item LongPants
 	item Skirt
 	item Kilt
 	item Kilt
