--- a/trunk/099/pkg/items/decorations/itemdesc.cfg
+++ b/trunk/099/pkg/items/decorations/itemdesc.cfg
@@ -939,6 +939,7 @@ Container 0x170a1
 	MaxItems			65535
 	Maxweight			65535
 	script			displaycase
+	OldObjtype			0x70a1
 }
 
 Item  0x170a2
@@ -950,6 +951,7 @@ Item  0x170a2
 	RequiresAttention	0
 	VendorSellsFor		500
 	VendorBuysFor		50
+	OldObjtype			0x70a2
 }
 
 Item  0x118b
