--- a/trunk/099/pkg/world/spawners/guardspawner/npcdesc.cfg
+++ b/trunk/099/pkg/world/spawners/guardspawner/npcdesc.cfg
@@ -8,7 +8,7 @@ entry CreateNPCInfo
 
 npctemplate guardspawner_townguard
 {
-	Name			<random> the Town Guard
+	Name			<random> the Guard
 	script		ai_newguard
 	ObjType		0x190
 	Color		33784
@@ -44,7 +44,7 @@ npctemplate guardspawner_townguard
 
 npctemplate guardspawner_post_guard
 {
--	Name			<random> the Guard
+	Name			<random> the Guard
 	script		ai_post_guard
 	ObjType		0x190
 	Color		33784
