- Started adding the racial bonuses to regen rates and vital calculations. - The pointing hand from the .point command wasn't being properly destroyed. Fixed. - Some more entries to the .fixcustomitems dot command. - Some more oldobjtype entries. These will be removed after the full item conversion on the live shard is done. - Public moongates now play sound effects when used. - Added some error printing to the guardspawner routine. - Fixed an error in guardspawner/npcdesc.cfg

--- a/099/pkg/items/decorations/itemdesc.cfg
+++ b/099/pkg/items/decorations/itemdesc.cfg
@@ -939,6 +939,7 @@ Container 0x170a1
 	MaxItems			65535
 	Maxweight			65535
 	script			displaycase
+	OldObjtype			0x70a1
 }
 
 Item  0x170a2
@@ -950,6 +951,7 @@ Item  0x170a2
 	RequiresAttention	0
 	VendorSellsFor		500
 	VendorBuysFor		50
+	OldObjtype			0x70a2
 }
 
 Item  0x118b
