- Fixed an error on paintboat where the ship hold wasn't being painted - Ship keys weren't being destroyed on drydock. Fixed. - Added some checks to make old ship deeds work again - Some names changed on the random name lists - On the character creation scripts, made sure points spent on Chivalry were moved to Leadership, thus "fixing" the Paladin. Also did the same with Focus, moving it to Meditation

--- a/099/pkg/npcs/names.cfg
+++ b/099/pkg/npcs/names.cfg
@@ -6111,7 +6111,7 @@ Names 13
 	Name4	Akio
 	Name5	Akira
 	Name6	Aoi
-	Name7	Arata
+	Name7	Amano
 	Name8	Atsushi
 	Name9	Dai
 	Name10	Daichi
@@ -6165,16 +6165,16 @@ Names 13
 	Name58	Keiichi
 	Name59	Keiji
 	Name60	Ken
-	Name61	Ken'ichi
+	Name61	Kenichi
 	Name62	Kenji
 	Name63	Kenshin
 	Name64	Kenta
 	Name65	Kichiro
 	Name66	Kichirou
-	Name67	Kin
+	Name67	Kinbei
 	Name68	Kioshi
 	Name69	Kiyoshi
-	Name70	Ko
+	Name70	Kojiro
 	Name71	Kohaku
 	Name72	Koichi
 	Name73	Koji
@@ -6214,7 +6214,7 @@ Names 13
 	Name107	Nobu
 	Name108	Nobuo
 	Name109	Nobuyuki
-	Name110	Nori
+	Name110	Mori
 	Name111	Noryo
 	Name112	Orochi
 	Name113	Osamu
@@ -6234,7 +6234,7 @@ Names 13
 	Name127	Shigeo
 	Name128	Shigeru
 	Name129	Shin
-	Name130	Shin'ichi
+	Name130	Shinichi
 	Name131	Shinji
 	Name132	Shiro
 	Name133	Sho
@@ -6243,7 +6243,7 @@ Names 13
 	Name136	Shou
 	Name137	Shuichi
 	Name138	Shuji
-	Name139	Sora
+	Name139	Shuhei
 	Name140	Susumu
 	Name141	Tadao
 	Name142	Tadashi
@@ -6314,7 +6314,7 @@ Names 14
 	Name14	Asami
 	Name15	Asuka
 	Name16	Atsuko
-	Name17	Avaron
+	Name17	Akako
 	Name18	Aya
 	Name19	Ayaka
 	Name20	Ayako
@@ -6341,7 +6341,7 @@ Names 14
 	Name41	Etsuko
 	Name42	Fuji
 	Name43	Fumiko
-	Name44	Gina
+	Name44	Itsuki
 	Name45	Hana
 	Name46	Hanako
 	Name47	Haru
@@ -6427,7 +6427,7 @@ Names 14
 	Name127	Miyoko
 	Name128	Miyuki
 	Name129	Mizuki
-	Name130	Moe
+	Name130	Motoko
 	Name131	Momo
 	Name132	Momoe
 	Name133	Momoko
@@ -6459,7 +6459,7 @@ Names 14
 	Name159	Sango
 	Name160	Sayuri
 	Name161	Setsuko
-	Name162	Shig
+	Name162	Shige
 	Name163	Shigeko
 	Name164	Shika
 	Name165	Shinju
