--- a/trunk/099/config/equip.cfg
+++ b/trunk/099/config/equip.cfg
@@ -98,97 +98,6 @@ Equipment monk
     Equip 0x170D        // sandals
 }
 
-Equipment Blacksmith
-{
-    Armor ChainmailTunic
-    Armor ChainmailLeggings
-    Armor ThighBoots
-    Armor BronzeShield
-    Weapon Scimitar
-    Equip 0x203b 1122	// short hair
-    Equip 0x203f 	// short beard
-    Equip 0x153e	// full apron
-}
-
-Equipment Mage
-{
-    Equip 0x1f03 18	// Robe
-    Equip 0x170d	// Sandles
-    Equip 0x203c 1123	// long hair
-    Equip 0x0efa	// spellbook
-}
-
-Equipment Tailor
-{
-    Equip 0x1efd  1301      // fancy shirt, white
-    Equip 0x1539        // long pants
-    Equip 0x170F 1120     // shoes    
-    Equip 0x203c 1124     // long hair
-}
-
-Equipment LeatherWorker
-{
-    Armor LeatherTunic
-    Armor LeatherSleeves
-    Armor LeatherLeggings
-    Armor ThighBoots  
-    Equip 0x203c 1125     // long hair
-}
-
-Equipment Provisioner
-{
-    Equip 0x1efd  1302      // fancy shirt, white
-    Equip 0x1537        // kilt
-    Armor ThighBoots  
-    Equip 0x203B 1113     // short hair
-    Equip 0x0f64        // torch
-}
-
-Equipment Carpenter
-{
-    Equip 0x1efd  1303      // fancy shirt, white
-    Equip 0x1537        // kilt
-    Armor ThighBoots    
-    Equip 0x2047 1104     // big hair
-    Equip 0x13e3        // hammer
-    Equip 0x204d        // vandyke
-}
-
-Equipment Bowyer
-{
-    Armor LeatherTunic
-    Armor LeatherSleeves
-    Armor LeatherLeggings
-    Armor ThighBoots   
-    Equip 0x203c 1105     // long hair
-    Weapon Crossbow
-}
-
-Equipment Ranger
-{
-    Armor LeatherTunic
-    Armor LeatherSleeves
-    Armor LeatherLeggings
-    Armor ThighBoots   
-    Equip 0x203c 1105     // long hair
-    Weapon Bow
-}
-
-Equipment Architect
-{
-    Equip 0x1efd  1304      // fancy shirt, white
-    Equip 0x1539        // long pants
-    Equip 0x170F 1120     // shoes    
-    Equip 0x203c 1106     // long hair
-}
-
-Equipment Scribe
-{
-    Equip 0x1f03 43	// Robe
-    Equip 0x170d	// Sandles
-    Equip 0x203c 1109	// long hair
-    Equip 0x0efa	// spellbook
-}
 
 equipment 1
 {
@@ -282,62 +191,6 @@ Equipment magic_dealer
 }
 
 
-
-Equipment baker
-{
-    Equip 0x170F 1120     // shoes    
-	Equip	0x1539 0x3BE    // long pants
-    Equip 0x1efd  1306      // fancy shirt, white
-	Equip	0x203D 0x2F6    // Ponytail
-	Equip	0x153D 0x28D    // a full apron
-}
-
-Equipment tailor
-{
-	Equip	0x170B 0x20     // boots
-	Equip	0x1539          // long pants
-    Equip 0x1efd  1307      // fancy shirt, white
-	Equip	0x171A 0x20     // a feathered hat
-	Equip	0x2049 0x2E1    // 
-	Equip	0x1541 0x20     // a body sash
-	Equip	0x1537 0x2AB    // a kilt
-}
-
-Equipment tinker
-{
-	Equip	0x170B 0x3      // boots
-	Equip	0x1539          // long pants
-    Equip 0x1efd  1308      // fancy shirt, white
-	Equip	0x2048          // 
-	Equip	0x1FA1 0x2E7    // tunic
-	Equip	0x1537 0x2E7    // a kilt
-}
-
-Equipment poor
-{
-	Equip	0x152E 0x2E7    // short pants
-	Equip	0x1517 0x2E7    // a shirt
-}
-
-Equipment butcher
-{
-	Equip	0xF43           // a hatchet
-	Equip	0x170B 0x84     // boots
-	Equip	0x1539          // long pants
-    Equip 0x1efd  1309      // fancy shirt, white
-	Equip	0x153F 0x85     // a bandana
-	Equip	0x153D 0x85     // a full apron
-}
-
-Equipment jeweler
-{
-	Equip	0x170B 0x30     // boots
-	Equip	0x1539 0x25B    // long pants
-	Equip	0x1719 0x30     // a bonnet
-	Equip	0x1FA1 0x25B    // tunic
-	Equip	0x1515 0x30     // a cloak
-}
-
 Equipment pirate
 {
 	Equip	0x1440          // a cutlass
@@ -361,80 +214,16 @@ equipment creature_spellcaster
 equip 0xe75
 }
 
-Equipment banker
+Equipment bankerelf
 {
-	Equip	0x170B          // boots
-	Equip	0x1539 0x2      // long pants
-    Equip 0x1efd  1310      // fancy shirt, white
-	Equip	0x203C 1108    // Long Hair
-	Equip	0x1FFD          // a surcoat
+	Equip	0x317A 0         // boots
+	Equip	0x3179 0x2      // long pants
+	Equip 0x3176  1305      // fancy shirt, white
+	Equip	0x2fc0 1107    // Long Hair
+	Equip	0x1FFD  0        // a surcoat
 	Equip	0x1515 0x2F1    // a cloak
 }
 
-Equipment baker
-{
-    Equip 0x170F 1120     // shoes    
-	Equip	0x1539 0x3BE    // long pants
-    Equip 0x1efd  1311      // fancy shirt, white
-	Equip	0x203D 0x2F6    // Ponytail
-	Equip	0x153D 0x28D    // a full apron
-}
-
-Equipment tailor
-{
-	Equip	0x170B 0x20     // boots
-	Equip	0x1539          // long pants
-    Equip 0x1efd  1312      // fancy shirt, white
-	Equip	0x171A 0x20     // a feathered hat
-	Equip	0x2049 0x2E1    // 
-	Equip	0x1541 0x20     // a body sash
-	Equip	0x1537 0x2AB    // a kilt
-}
-
-Equipment tinker
-{
-	Equip	0x170B 0x3      // boots
-	Equip	0x1539          // long pants
-    Equip 0x1efd  1313      // fancy shirt, white
-	Equip	0x2048          // 
-	Equip	0x1FA1 0x2E7    // tunic
-	Equip	0x1537 0x2E7    // a kilt
-}
-
-Equipment poor
-{
-	Equip	0x152E 0x2E7    // short pants
-	Equip	0x1517 0x2E7    // a shirt
-}
-
-Equipment butcher
-{
-	Equip	0xF43           // a hatchet
-	Equip	0x170B 0x84     // boots
-	Equip	0x1539          // long pants
-    Equip 0x1efd  1314      // fancy shirt, white
-	Equip	0x153F 0x85     // a bandana
-	Equip	0x153D 0x85     // a full apron
-}
-
-Equipment jeweler
-{
-	Equip	0x170B 0x30     // boots
-	Equip	0x1539 0x25B    // long pants
-	Equip	0x1719 0x30     // a bonnet
-	Equip	0x1FA1 0x25B    // tunic
-	Equip	0x1515 0x30     // a cloak
-}
-
-Equipment pirate
-{
-	Equip	0x1440          // a cutlass
-	Equip	0x170B 0x192    // boots
-	Equip	0x1539 0x3E5    // long pants
-	Equip	0x1517 0x192    // a shirt
-	Equip	0x1543 1645    // a skullcap
-	Equip	0x13C6          // leather gloves
-}
 
 //
 // EQUIP.CFG - default outfits, usually for NPCs.
@@ -501,14 +290,6 @@ Equipment necromancer
     Equip 0x203c 1122	// long hair
     Equip 0x0efa	// spellbook
     weapon 0x0df0       //black staff
-}
-Equipment decorator
-{
-	Equip	0x170D          // sandals
-	Equip	0x1539 0x386    // long pants
-	Equip	0x13D5          // studded gloves
-	Equip	0x203B 1116     // 
-	Equip	0x1FA1          // tunic
 }
 Equipment bewitchedhalberd
 {
@@ -815,6 +596,18 @@ Equipment ChaosGuard
 	Equip	ChaosShield
 	Equip	LongSword
 }
+
+Equipment TownGuardElf
+{
+	Equip	WingedHelm
+	Equip	WoodlandChest
+	Equip	WoodlandArms
+	Equip	WoodlandLeggings
+	Equip	WoodlandGauntlets
+	Equip	WoodlandGorget
+	Equip	RuneBlade
+}
+
 
 Equipment shipcaptain
 {
