--- a/099/pkg/npcs/names.cfg
+++ b/099/pkg/npcs/names.cfg
@@ -6502,15 +6502,15 @@ Names 14
 Names 15
 {
 	Count	200
-	Name1	Erutáron
+	Name1	Erutaron
 	Name2	Rhasscaunion
 	Name3	Balalaithdren
 	Name4	Gilthradas
 	Name5	Draugion
 	Name6	Taurdordon
-	Name7	Urúvdur
+	Name7	Uruvdur
 	Name8	Lletheldorion
-	Name9	Tâlmaeon
+	Name9	Talmaeon
 	Name10	Sidhion
 	Name11	Morlaerion
 	Name12	Glanron
@@ -6520,13 +6520,13 @@ Names 15
 	Name16	Landapantan
 	Name17	Tanenil
 	Name18	Valenbarthon
-	Name19	Mátaritheth
+	Name19	Mataritheth
 	Name20	Eirgolion
 	Name21	Arandil
-	Name22	Ormártan
+	Name22	Ormartan
 	Name23	Gilkanond
 	Name24	Tamentar
-	Name25	Mátadirthon
+	Name25	Matadirthon
 	Name26	Tristherindoion
 	Name27	Lydur
 	Name28	Veryamelion
@@ -6541,7 +6541,7 @@ Names 15
 	Name37	Tidurion
 	Name38	Elar
 	Name39	Belfinnen
-	Name40	Yalathârion
+	Name40	Yalatharion
 	Name41	Dosrauthion
 	Name42	Manmon
 	Name43	Hothdir
@@ -6549,7 +6549,7 @@ Names 15
 	Name45	Eldor
 	Name46	Glennadhamdal
 	Name47	Airron
-	Name48	Daerônthor
+	Name48	Daeronthor
 	Name49	Idheyion
 	Name50	Erynion
 	Name51	Thanlassond
@@ -6565,7 +6565,7 @@ Names 15
 	Name61	Tanion
 	Name62	Bellcarion
 	Name63	Cundmelion
-	Name64	Tâlgolen
+	Name64	Talgolen
 	Name65	Aenordorien
 	Name66	Menadhian
 	Name67	Emerien
@@ -6574,13 +6574,13 @@ Names 15
 	Name70	Locien
 	Name71	Laniothil
 	Name72	Maethil
-	Name73	Nitholë
+	Name73	Nithole
 	Name74	Aelion
 	Name75	Aulvantion
 	Name76	Alyacauthor
 	Name77	Aranron
 	Name78	Arthitar
-	Name79	Neastóle
+	Name79	Neastole
 	Name80	Ovorrond
 	Name81	Eruvantron
 	Name82	Istgadcan
@@ -6590,17 +6590,17 @@ Names 15
 	Name86	Draugdarien
 	Name87	Nenborn
 	Name88	Taenion
-	Name89	Tinordómon
+	Name89	Tinordomon
 	Name90	Leaminaiion
 	Name91	Leapantdil
 	Name92	Tamtornen
 	Name93	Aulyonion
-	Name94	Erutáethon
+	Name94	Erutaethon
 	Name95	Meldaglenien
 	Name96	Caunsireth
-	Name97	Tûrin
+	Name97	Turin
 	Name98	Eruthanion
-	Name99	Tûrin
+	Name99	Turin
 	Name100	Glendirdren
 	Name101	Tacaeien
 	Name102	Merithanthon
@@ -6613,12 +6613,12 @@ Names 15
 	Name109	Laerdaugion
 	Name110	Tithfinien
 	Name111	Limion
-	Name112	Tûrin
+	Name112	Turin
 	Name113	Meridoron
 	Name114	Laiquafinddan
 	Name115	Cundnorndhron
-	Name116	Sidholë
-	Name117	Erumárion
+	Name116	Sidhole
+	Name117	Erumarion
 	Name118	Emerdion
 	Name119	Mormaeion
 	Name120	Taladerdorien
@@ -6627,11 +6627,11 @@ Names 15
 	Name123	Tamadion
 	Name124	Neurdur
 	Name125	Drasiron
-	Name126	Máthanion
+	Name126	Mathanion
 	Name127	Tharyonion
 	Name128	Roheradhamion
-	Name129	Côfohien
-	Name130	Tûrtherion
+	Name129	Cofohien
+	Name130	Turtherion
 	Name131	Suicaeien
 	Name132	Idhrenserdur
 	Name133	Taminaion
@@ -6649,7 +6649,7 @@ Names 15
 	Name145	Ordartur
 	Name146	Elranthor
 	Name147	Revrond
-	Name148	Indóion
+	Name148	Indoion
 	Name149	Aranthal
 	Name150	Edencon
 	Name151	Sidhdauguth
@@ -6658,18 +6658,18 @@ Names 15
 	Name154	Garton
 	Name155	Immoron
 	Name156	Gleinadaeil
-	Name157	Tûrin
-	Name158	Útírradtur
+	Name157	Turin
+	Name158	Utirradtur
 	Name159	Tanpanton
 	Name160	Galennonion
 	Name161	Rildur
 	Name162	Alyadaugduil
-	Name163	Tûrin
+	Name163	Turin
 	Name164	Celecon
 	Name165	Malis
 	Name166	Lairecaundad
 	Name167	Erulaitur
-	Name168	Neônon
+	Name168	Neonon
 	Name169	Darmollion
 	Name170	Airgon
 	Name171	Tananean
@@ -6677,14 +6677,14 @@ Names 15
 	Name173	Polenenion
 	Name174	Daugien
 	Name175	Rithanon
-	Name176	Rûthil
+	Name176	Ruthil
 	Name177	Ariadede
 	Name178	Horthion
-	Name179	Falasônduil
-	Name180	Daerthârion
+	Name179	Falasonduil
+	Name180	Daertharion
 	Name181	Castien
 	Name182	Verdur
-	Name183	Dûrdil
+	Name183	Durdil
 	Name184	Caunkanien
 	Name185	Thargadede
 	Name186	Cerethonion
@@ -6698,7 +6698,7 @@ Names 15
 	Name194	Aphcaonien
 	Name195	Melauthdir
 	Name196	Eircaudas
-	Name197	Idhmaenûn
+	Name197	Idhmaenun
 	Name198	Suitarar
 	Name199	Tadhudond
 	Name200	Tanandon
@@ -6712,14 +6712,14 @@ Names 16
 	Name3	Ahthensinya
 	Name4	Altelwen
 	Name5	Raimana
-	Name6	Beldëmeldë
+	Name6	Beldemelde
 	Name7	Esrahiniel
 	Name8	Minsathdeth
 	Name9	Mellinniel
 	Name10	Esaliel
 	Name11	Laurmelthiriel
 	Name12	Melsarthawen
-	Name13	Lúthmara
+	Name13	Luthmara
 	Name14	Limien
 	Name15	Ainmaiviel
 	Name16	Venalthea
@@ -6738,7 +6738,7 @@ Names 16
 	Name29	Solorlimwen
 	Name30	Earraniel
 	Name31	Alabeniel
-	Name32	Moréathiel
+	Name32	Moreathiel
 	Name33	Eruiel
 	Name34	Melda
 	Name35	Cauniel
@@ -6783,10 +6783,10 @@ Names 16
 	Name74	Tanna
 	Name75	Eruariel
 	Name76	Araiel
-	Name77	Ghileldë
+	Name77	Ghilelde
 	Name78	Agnostiel
 	Name79	Tirnaththa
-	Name80	Morésidhwen
+	Name80	Moresidhwen
 	Name81	Marien
 	Name82	Alladhia
 	Name83	Peddethya
@@ -6826,7 +6826,7 @@ Names 16
 	Name117	Islaiima
 	Name118	Galedethiel
 	Name119	Cuiluraiiel
-	Name120	Ismelëa
+	Name120	Ismelea
 	Name121	Silwen
 	Name122	Nesswen
 	Name123	Erudanna
@@ -6837,7 +6837,7 @@ Names 16
 	Name128	Maeanadiriel
 	Name129	Faedranniel
 	Name130	Minudothsta
-	Name131	Agtôrra
+	Name131	Agtorra
 	Name132	Aliel
 	Name133	Nimrinnna
 	Name134	Saerima
@@ -6846,7 +6846,7 @@ Names 16
 	Name137	Eswethda
 	Name138	Miriel
 	Name139	Minialwen
-	Name140	Alassë
+	Name140	Alasse
 	Name141	Vensidhiel
 	Name142	Aerurainyl
 	Name143	Ialarwen
@@ -6870,11 +6870,11 @@ Names 16
 	Name161	Vanalimaxa
 	Name162	Finliniel
 	Name163	Tarsuithae
-	Name164	Endëmima
+	Name164	Endemima
 	Name165	Agtelwen
 	Name166	Rodwen
 	Name167	Gwethmeldirya
-	Name168	Sabaressë
+	Name168	Sabaresse
 	Name169	Filwiliel
 	Name170	Nessanna
 	Name171	Tarrinniel
@@ -6890,7 +6890,7 @@ Names 16
 	Name181	Melien
 	Name182	Medistwen
 	Name183	Adien
-	Name184	Fárgobeliel
+	Name184	Fargobeliel
 	Name185	Venialtha
 	Name186	Ithananniel
 	Name187	Maeredra
