- Added elven boots to the TownGuardElf equip template - Leather shorts are now studded, and their Armor Rating and Strength Requirements have been set to match that. - Elven Spellblade is now correctly set as a two-handed weapon. The damage and speed now matches that of a double weapon. - Numerous fixes to the npc_setup script. - Added support for elven and gargoyle henchmen. - Added all elven weapons, armor and clothing to the corresponding crafting menus. - Added henchmen to the spawn region for Heartwood. - Some adjustments for elves and their equipment to the dressme script.

--- a/099/config/equip.cfg
+++ b/099/config/equip.cfg
@@ -605,6 +605,7 @@ Equipment TownGuardElf
 	Equip	WoodlandLeggings
 	Equip	WoodlandGauntlets
 	Equip	WoodlandGorget
+	Equip ElvenBoots
 	Equip	RuneBlade
 }
 
