--- a/099/pkg/skills/craftingskills/blacksmithy/blacksmithy.cfg
+++ b/099/pkg/skills/craftingskills/blacksmithy/blacksmithy.cfg
@@ -144,6 +144,16 @@ blacksmithy 0x0f43
 	bulk_deed		1
 }
 
+blacksmithy 0x2d2d
+{ 
+	Name			assassin spike
+	material		10
+	skill		30
+	time			2
+	hasquality	1
+	bulk_deed		1
+}
+
 
 
 
@@ -258,6 +268,46 @@ blacksmithy 0X26c0
 	bulk_deed		1
 }
 
+blacksmithy 0x2d2e
+{ 
+	Name			leafblade
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x2d2f
+{ 
+	Name			war cleaver
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x2d33
+{ 
+	Name			radiant scimitar
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x2d35
+{ 
+	Name			elven machete
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
 
 
 
@@ -308,6 +358,16 @@ blacksmithy 0x143c
 blacksmithy 0X26bc
 { 
 	Name			scepter
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0X2d30
+{ 
+	Name			diamond mace
 	material		30
 	skill		65
 	time			4
@@ -451,6 +511,25 @@ blacksmithy 0X26ce
 	bulk_deed		1
 }
 
+blacksmithy 0X2d32
+{ 
+	Name			rune blade
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0X2d34
+{ 
+	Name			ornate axe
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
 
 
 
@@ -501,6 +580,16 @@ blacksmithy 0x26be
 blacksmithy 0x26bf
 { 
 	Name			double bladed staff
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x2d2c
+{ 
+	Name			spellblade
 	material		40
 	skill		85
 	time			5
@@ -829,3 +918,34 @@ blacksmithy 0x1412
 	hasquality	1
 	bulk_deed		1
 }
+
+blacksmithy 0x2b6e
+{ 
+	Name			circlet
+	material		15
+	skill		50
+	time			3
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x2b6f
+{ 
+	Name			royal circlet
+	material		15
+	skill		50
+	time			3
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x2b70
+{ 
+	Name			gemmed circlet
+	material		15
+	skill		50
+	time			3
+	hasquality	1
+	bulk_deed		1
+}
+
