--- a/099/pkg/skills/craftingskills/carpentry/carpentry.cfg
+++ b/099/pkg/skills/craftingskills/carpentry/carpentry.cfg
@@ -1,4 +1,5 @@
 ///////////////////
+///////////////////
 //  chairs
 ///////////////////
 
@@ -585,6 +586,15 @@ carpentry 0x1706a
 	time			5
 }
 
+carpentry 0x2d31
+{ 
+	Name			a wild staff
+	material		30
+	skill		70
+	has_quality	1
+	time			5
+}
+
 
 
 ///////////////////
@@ -715,5 +725,119 @@ Element 0x26c3
 	skill		90
 	has_quality	1
 	time			9
+}
+
+Element 0x2d2a
+{
+	Name			elven composite longbow
+	Material		20
+	skill		85
+	has_quality	1
+	time			9
+}
+
+Element 0x2d2b
+{
+	Name			elven shortbow
+	Material		15
+	skill		95
+	has_quality	1
+	time			9
+}
+
+///////////////////
+//  woodland armor
+///////////////////
+Element 0x2b67
+{ 
+	Name			woodland chest
+	material		60
+	skill		90
+	time			6
+	hasquality	1
+	bulk_deed		1
+}
+
+Element 0x2b6d
+{ 
+	Name			female woodland chest
+	material		60
+	skill		90
+	time			6
+	hasquality	1
+	bulk_deed		1
+}
+
+Element 0x2b6b
+{ 
+	Name			woodland leggings
+	material		50
+	skill		85
+	time			6
+	hasquality	1
+	bulk_deed		1
+}
+
+Element 0x2b6c
+{ 
+	Name			woodland arms
+	material		35
+	skill		80
+	time			6
+	hasquality	1
+	bulk_deed		1
+}
+
+Element 0x2b6a
+{ 
+	Name			woodland gauntlets
+	material		25
+	skill		75
+	time			6
+	hasquality	1
+	bulk_deed		1
+}
+
+Element 0X2b69
+{ 
+	Name			woodland gorget
+	material		25
+	skill		75
+	time			6
+	hasquality	1
+	bulk_deed		1
+}
+
+///////////////////
+//  elven helms
+///////////////////
+Element 0x2b71
+{
+	Name			raven helm
+	material		15
+	skill		30
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+Element 0x2b72
+{ 
+	Name			vulture helm
+	material		20
+	skill		65
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+Element 0x2b73
+{ 
+	Name			winged helm
+	material		40
+	skill		80
+	time			5
+	hasquality	1
+	bulk_deed		1
 }
 
