--- a/099/pkg/skills/craftingskills/tailoring/cloth_items.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/cloth_items.cfg
@@ -223,3 +223,39 @@ tailoring 0xB00D
 	skill	100
 	stackable	1
 }
+
+tailoring 0x3176
+{
+	Name		fancy elven shirt
+	material	10
+	skill	70
+}
+
+tailoring 0x3175
+{
+	Name		elven shirt
+	material	8
+	skill	60
+}
+
+tailoring 0x3179
+{
+	Name		elven pants
+	material	10
+	skill	70
+}
+
+tailoring 0x3173
+{
+	Name		male elven robe
+	material	20
+	skill	95
+}
+
+tailoring 0x3174
+{
+	Name		female elven robe
+	material	20
+	skill	95
+}
+
