--- a/099/pkg/skills/craftingskills/tailoring/leather_items.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/leather_items.cfg
@@ -113,16 +113,6 @@ leather 0x1C0A
 	hasquality	1
 }
 
-leather 0x1C00
-{
-	Name		leather shorts
-	material	32
-	skill	90
-	time		1
-	hasquality	1
-}
-
-
 
 
 ///////////////////
@@ -210,6 +200,15 @@ leather 0x1C0C
 	hasquality	1
 }
 
+leather 0x1C00
+{
+	Name		leather shorts
+	material	32
+	skill	90
+	time		2
+	hasquality	1
+}
+
 
 
 
@@ -291,3 +290,148 @@ leather 0x1374
 	time		1
 	hasquality	0
 }
+
+
+
+///////////////////
+//  Leaf armor
+///////////////////
+
+leather 0x2fc7
+{
+	name		leaf gorget
+	material	6
+	skill	45
+	time		1
+	hasquality	1
+}
+
+leather 0x2fc6
+{
+	name		leaf gloves
+	material	6
+	skill	45
+	time		1
+	hasquality	1
+}
+
+leather 0x2fc8
+{
+	name		leaf arms
+	material	12
+	skill	55
+	time		1
+	hasquality	1
+}
+
+leather 0x2fc9
+{
+	name		leaf leggings
+	material	20
+	skill	65
+	time		1
+	hasquality	1
+}
+
+leather 0x2fca
+{
+	Name		leaf tonlet
+	material	20
+	skill	65
+	time		1
+	hasquality	1
+}
+
+leather 0x2fc5
+{
+	name		leaf tunic
+	material	20
+	skill	65
+	time		1
+	hasquality	1
+}
+
+leather 0x2fcb
+{
+	Name		female leaf tunic
+	material	20
+	skill	65
+	time		1
+	hasquality	1
+}
+
+
+
+
+///////////////////
+//  hide armor
+///////////////////
+
+leather 0x2b76
+{
+	name		hide gorget
+	material	8
+	skill	65
+	time		2
+	hasquality	1
+}
+
+leather 0x2b75
+{
+	name		hide gloves
+	material	8
+	skill	65
+	time		2
+	hasquality	1
+}
+
+leather 0x2b77
+{
+	Name		hide pauldrons
+	material	20
+	skill	80
+	time		2
+	hasquality	1
+}
+
+leather 0x2b78
+{
+	Name		hide leggings
+	material	32
+	skill	90
+	time		2
+	hasquality	1
+}
+
+leather 0x2b74
+{
+	Name		hide tunic
+	material	32
+	skill	90
+	time		2
+	hasquality	1
+}
+
+leather 0x2b79
+{
+	Name		female hide tunic
+	material	32
+	skill	90
+	time		2
+	hasquality	1
+}
+
+
+
+///////////////////
+//  elven footwear
+///////////////////
+
+leather 0x317a
+{
+	Name		elven boots
+	material	8
+	skill	50
+	time		1
+}
+
