--- a/099/pkg/skills/craftingskills/tailoring/menu.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/menu.cfg
@@ -18,6 +18,8 @@ Submenu shirts
 	Entry	0x1FA1	Tunic
 	Entry	0x1F7B	Doublet
 	Entry	0x1F9F	Jester's Suit
+	Entry	0x3175	Elven Shirt
+	Entry	0x3176	Fancy Elven Shirt
 }
 
 Submenu pants
@@ -26,6 +28,7 @@ Submenu pants
 	Entry	0x152E	Short pants
 	Entry	0x1539	Fancy pants
 	Entry	0x1537	Kilt
+	Entry	0x3179	Elven Pants
 }
 
 Submenu dresses
@@ -44,6 +47,8 @@ Submenu misc_clothing
 	Entry	0x153B	Half Apron
 	Entry	0x153D	Full Apron
 	Entry	0x1541	Body Sash
+	Entry	0x3173	Male Elven Robe
+	Entry	0x3174	Female Elven Robe
 }
 
 Submenu hats1
@@ -85,6 +90,8 @@ Item leathermenu
 	Submenu	0x1C02	female_armor		Other Armor
 	Submenu	0x1711	shoes			Shoes
 	Submenu	0x0E76	other_leather		Misc.
+	Submenu	0x2fc5	leaf_armor			Leaf Armor
+	Submenu	0x2b74	hide_armor			Hide Armor
 }
 
 Item leather_armor
@@ -114,10 +121,11 @@ Item female_armor
 	show_upgrade_options	1
 	Entry	0x1C0A	Leather Bustier
 	Entry	0x1C0C	Studded Bustier
-	Entry	0x1C00	Leather Shorts
 	Entry	0x1C08	Leather Skirt
+	Entry	0x1C00	Leather Shorts
 	Entry	0x1C06	Female Leather
 	Entry	0x1C02	Female Studded
+
 }
 
 Item shoes
@@ -127,6 +135,7 @@ Item shoes
 	Entry	0x170F	Shoes
 	Entry	0x170B	Leather Boots
 	Entry	0x1711	Thigh Boots
+	Entry 0x317a	Elven Boots
 }
 
 Item other_leather
@@ -136,4 +145,27 @@ Item other_leather
 	Entry	0x0E79	Pouch
 	Entry	0x0E75	Backpack
 	Entry	0x1374	Bridle
+}
+
+Item leaf_armor
+{
+	show_upgrade_options	1
+	Entry	0x2fc7	Leaf Gorget
+	Entry	0x2fc6	Leaf Gloves
+	Entry	0x2fc8	Leaf Arms
+	Entry	0x2fc9	Leaf Leggings
+	Entry	0x2fc5	Leaf Tunic
+	Entry	0x2fcb	Female Leaf
+	Entry	0x2fca	Leaf Tonlet
+}
+
+Item hide_armor
+{
+	show_upgrade_options	1
+	Entry	0x2b76	Hide Gorget
+	Entry	0x2b75	Hide Gloves
+	Entry	0x2b77	Hide Pauldrons
+	Entry	0x2b78	Hide Leggings
+	Entry	0x2b74	Hide Tunic
+	Entry	0x2b79	Female Hide
 }
