--- a/trunk/099/config/equip.cfg
+++ b/trunk/099/config/equip.cfg
@@ -605,6 +605,7 @@ Equipment TownGuardElf
 	Equip	WoodlandLeggings
 	Equip	WoodlandGauntlets
 	Equip	WoodlandGorget
+	Equip ElvenBoots
 	Equip	RuneBlade
 }
 
