--- a/trunk/099/pkg/combat/weapons/itemdesc.cfg
+++ b/trunk/099/pkg/combat/weapons/itemdesc.cfg
@@ -1694,17 +1694,18 @@ Weapon 0x27f5
 Weapon 0x2d2c
 {
 	Name			Spellblade
-	Speed		35
+	Speed		50
 	Damage		4d6+3
 	Attribute		Fencing
-	MaxHP		150
+	MaxHP		200
 	Script		::bladed
 	HitSound		0x23C
 	MissSound		0x23A
 	Anim			0xA
 	MountedAnim	0x1A
-	VendorSellsFor	150
-	VendorBuysFor	60
+	VendorSellsFor	200
+	VendorBuysFor	80
+	TwoHanded		1
 	blockcircle	1
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
