--- a/trunk/099/pkg/skills/craftingskills/blacksmithy/menu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/blacksmithy/menu.cfg
@@ -47,6 +47,9 @@ Item helms
 	Entry	0x140c	Bascinet
 	Entry	0x140e	Nose Helm
 	Entry	0x1412	Plate Helm
+	Entry	0x2b6e	Circlet
+	Entry	0x2b6f	Royal Circlet
+	Entry	0x2b70	Gemmed Circlet
 }
 
 Item weapons
@@ -55,8 +58,8 @@ Item weapons
 	Submenu	0x1442	axes		Axes
 	Submenu	0x0f5c	maces	Maces
 	Submenu	0x0f4e	polearms	Polearms
-	Submenu	0x0f51	smallblades	Small Blades
-	Submenu	0x1402	otherweapons	Other
+	Submenu	0x0f51	lightblades	Light Blades
+	Submenu	0x1402	otherweapons	Exotics
 
 }
 
@@ -76,22 +79,24 @@ Item axes
 {
 	Entry	0x13fa	Large Battleaxe
 	Entry	0x1442	Two-handed Axe
-	Entry	0x13af	War Axe
 	Entry	0x0f4b	Double Axe
 	Entry	0x0f49	Axe
 	Entry	0x0f47	Battleaxe
 	Entry	0x0f43	Hatchet
 	Entry	0x0f45	Executioner's Axe
+	Entry	0x2d34	Ornate Axe
 }
 
 Item maces
 {
 	Entry	0x1406	War Mace
 	Entry	0x1438	War Hammer
+	Entry	0x13af	War Axe
 	Entry	0x143a	Maul
 	Entry	0x143c	Hammer Pick
 	Entry	0x0f5c	Mace
 	Entry	0x26bc	Scepter
+	Entry	0x2d30	Diamond Mace
 }
 
 Item polearms
@@ -106,12 +111,16 @@ Item polearms
 	Entry	0x26c0	Lance
 }
 
-Item smallblades
+Item lightblades
 {
 	Entry	0x0f51	Dagger
 	Entry	0x13f6	Butcher Knife 
 	Entry	0x0ec4	Skinning Knife
 	Entry	0x0ec2	Cleaver
+	Entry 0x2d2d	Assassin Spike
+	Entry 0x2d2e	Leafblade
+	Entry 0x2d2c	Elven Spellblade
+	Entry 0x2d32	Rune Blade
 }
 
 Item otherweapons
@@ -121,6 +130,9 @@ Item otherweapons
 	Entry	0x26c1	Crescent Blade
 	Entry	0x26bf	Double Bladed Staff
 	Entry	0x0e87	Pitchfork
+	Entry	0x2d35	Elven Machete
+	Entry	0x2d33	Radiant Scimitar
+	Entry	0x2d2f	War Cleaver
 }
 
 Item other
