--- a/trunk/099/pkg/skills/craftingskills/carpentry/menu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/carpentry/menu.cfg
@@ -2,11 +2,13 @@ Item mainmenu
 {
 	Submenu	0X0A2A	furniture		furniture menu
 	Submenu	0x0e42	storage		storage menu
-	Submenu	0x0eb1	instruments	instruments menu
+	Submenu	0x0eb1	instruments		instruments menu
 	Submenu	0x0e8a	woodenweapons	weapons menu
 	Submenu	0x13B2	archeryitems	archery items
 	Submenu	0x1940	miscmenu		misc menu
 	Submenu	0xB000	addons		AddOns menu
+	Submenu	0x2b67	woodenarmor	wooden armor menu
+	Submenu	0x2b71	woodenhelms	wooden helms menu
 }
 
 Item furniture
@@ -106,6 +108,7 @@ Item woodenweapons
 	Entry	0x13f9	Gnarled Staff
 	Entry	0x0df0	Black Staff
 	Entry	0x13b3	Club
+	Entry 0x2d31	Wild Staff
 }
 
 Item addons
@@ -129,4 +132,24 @@ Item archeryitems
 	Entry	0x0f4f	Crossbow
 	Entry	0x13fd	Heavy Crossbow
 	Entry 0x26c3	Repeating Crossbow
+	Entry 0x2d2a	Elven Longbow
+	Entry 0x2d2b	Elven Shortbow
 }
+
+Item woodenarmor
+{
+	Entry 0x2b69	Woodland Gorget
+	Entry 0x2b6a	Woodland Gauntlets
+	Entry 0x2b6c	Woodland Arms
+	Entry 0x2b6b	Woodland Leggings
+	Entry 0x2b67	Woodland Chest
+	Entry 0x2b6d	Female Woodland Chest
+}
+
+Item woodenhelms
+{
+	Entry 0x2b71	Raven Helm
+	Entry 0x2b72	Vulture Helm
+	Entry 0x2b73	Winged Helm
+}
+
