--- a/trunk/099/pkg/skills/craftingskills/tinkering/menu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/menu.cfg
@@ -89,6 +89,7 @@ Item glassmenu
 	Entry	0x09A7	Glass Pitcher
 	Entry	0x0f89	Obsidian
 	Entry	0x1f81	Glass
+	Entry	0x2fb8	Elven Glasses
 }
 
 Item goldmenu
