--- a/trunk/099/config/npcdesc.cfg
+++ b/trunk/099/config/npcdesc.cfg
@@ -75,6 +75,7 @@ NpcTemplate  crier
 	ObjType		0x190
 	Color		33784
 	TrueColor		33784
+	colorrange	human
 	Gender		2
 	STR			100
 	INT			100
@@ -111,6 +112,7 @@ NpcTemplate  person
 	ObjType		0x190
 	Color		33784
 	TrueColor		33784
+	colorrange	human
 	Gender		2
 	STR			70
 	INT			50
@@ -147,6 +149,7 @@ NpcTemplate  townperson
 	ObjType     0x190
 	Color       33784
 	TrueColor   33784
+	colorrange	human
 	Gender      2
 	STR         70
 	INT         50
@@ -181,6 +184,7 @@ NpcTemplate  questie
 	ObjType     0x190
 	Color       33784
 	TrueColor   33784
+	colorrange	human
 	Gender      2
 	STR         100
 	INT         100
