--- a/trunk/099/pkg/world/spawners/guardspawner/npcdesc.cfg
+++ b/trunk/099/pkg/world/spawners/guardspawner/npcdesc.cfg
@@ -13,6 +13,7 @@ npctemplate guardspawner_townguard
 	ObjType		0x190
 	Color		33784
 	TrueColor		33784
+	colorrange	human
 	Gender		2
 	STR			200
 	INT			100
@@ -49,6 +50,7 @@ npctemplate guardspawner_post_guard
 	ObjType		0x190
 	Color		33784
 	TrueColor		33784
+	colorrange	human
 	Gender		2
 	STR			200
 	INT			100
