- Some fixes to npcdesc files so human merchants and townspeople have random skin color. - Enabled elf character creation and elven house tiles. - Elves now have 50 bonus mana. - Added Dex penalty to Vulture Helm and Winged Helm. - Humans now get more hides when carving a corpse. - Humans get more logs when lumberjacking and more ore when mining. - Humans get 100 more carrying capacity. This affects stamina consumption. - Elves get a 20% higher chance of getting colored ores while mining. - Lockdowns and secure container limits have been raised. Max lockdowns is now 750 multiplied by house value. Max secure containers is 10 multiplied by house value. - Various fixes to npc_setup.src for coloring npc skins for elves and gargoyles. - Added .makeelf and .makehuman commands for converting player characters between races.

--- a/099/config/npcdesc.cfg
+++ b/099/config/npcdesc.cfg
@@ -75,6 +75,7 @@ NpcTemplate  crier
 	ObjType		0x190
 	Color		33784
 	TrueColor		33784
+	colorrange	human
 	Gender		2
 	STR			100
 	INT			100
@@ -111,6 +112,7 @@ NpcTemplate  person
 	ObjType		0x190
 	Color		33784
 	TrueColor		33784
+	colorrange	human
 	Gender		2
 	STR			70
 	INT			50
@@ -147,6 +149,7 @@ NpcTemplate  townperson
 	ObjType     0x190
 	Color       33784
 	TrueColor   33784
+	colorrange	human
 	Gender      2
 	STR         70
 	INT         50
@@ -181,6 +184,7 @@ NpcTemplate  questie
 	ObjType     0x190
 	Color       33784
 	TrueColor   33784
+	colorrange	human
 	Gender      2
 	STR         100
 	INT         100
