--- a/099/pkg/combat/armor/itemdesc.cfg
+++ b/099/pkg/combat/armor/itemdesc.cfg
@@ -3185,6 +3185,7 @@ Armor 0x2b72
 	MaxHP		180
 	blockcircle	2
 	strrequired	75
+	DexPenalty	1
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
@@ -3200,6 +3201,7 @@ Armor 0x2b73
 	MaxHP		184
 	blockcircle	1
 	strrequired	90
+	DexPenalty	2
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
