--- a/099/pkg/npcs/townfolk/guards/npcdesc.cfg
+++ b/099/pkg/npcs/townfolk/guards/npcdesc.cfg
@@ -16,6 +16,7 @@ NpcTemplate townguard
 	ObjType		0x190
 	Color		33784
 	TrueColor		33784
+	colorrange	human
 	Gender		2
 	STR			200
 	INT			100
@@ -52,6 +53,7 @@ NpcTemplate chaosguard
 	ObjType		0x190
 	Color		33784
 	TrueColor		33784
+	colorrange	human
 	Gender		2
 	STR			200
 	INT			100
@@ -90,6 +92,7 @@ NpcTemplate orderguard
 	ObjType		0x190
 	Color		33784
 	TrueColor		33784
+	colorrange	human
 	Gender		2
 	STR			200
 	INT			100
@@ -128,6 +131,7 @@ NpcTemplate castleguard
 	ObjType		0x190
 	Color		33784
 	TrueColor		33784
+	colorrange	human
 	Gender		2
 	STR			200
 	INT			100
@@ -164,6 +168,7 @@ NpcTemplate warrior
 	ObjType		0x190
 	Color		33784
 	TrueColor		33784
+	colorrange	human
 	Gender		2
 	STR			30
 	INT			30
