- Numerous scripts scanned through the first 5 character slots of an account. They now scan through all 7. - Alliance and Guild Chat have been implemented as Global Chat. - Woodland Armor can now be upgraded properly. - Added itemdesc entries for the new colored logs. - Added a command for fixing all druid bags. They had entries for the old rune objtypes. - Added several commands for GM guild administration: .createguild, .destroyguild, .addtoguild, .removefromguild, .wipeguildmembership

--- a/099/pkg/skills/craftingskills/carpentry/carpentry.cfg
+++ b/099/pkg/skills/craftingskills/carpentry/carpentry.cfg
@@ -754,7 +754,7 @@ Element 0x2b67
 	material		60
 	skill		90
 	time			6
-	hasquality	1
+	has_quality	1
 	bulk_deed		1
 }
 
@@ -764,7 +764,7 @@ Element 0x2b6d
 	material		60
 	skill		90
 	time			6
-	hasquality	1
+	has_quality	1
 	bulk_deed		1
 }
 
@@ -774,7 +774,7 @@ Element 0x2b6b
 	material		50
 	skill		85
 	time			6
-	hasquality	1
+	has_quality	1
 	bulk_deed		1
 }
 
@@ -784,7 +784,7 @@ Element 0x2b6c
 	material		35
 	skill		80
 	time			6
-	hasquality	1
+	has_quality	1
 	bulk_deed		1
 }
 
@@ -794,7 +794,7 @@ Element 0x2b6a
 	material		25
 	skill		75
 	time			6
-	hasquality	1
+	has_quality	1
 	bulk_deed		1
 }
 
@@ -804,7 +804,7 @@ Element 0X2b69
 	material		25
 	skill		75
 	time			6
-	hasquality	1
+	has_quality	1
 	bulk_deed		1
 }
 
@@ -817,7 +817,7 @@ Element 0x2b71
 	material		15
 	skill		30
 	time			4
-	hasquality	1
+	has_quality	1
 	bulk_deed		1
 }
 
@@ -827,7 +827,7 @@ Element 0x2b72
 	material		20
 	skill		65
 	time			5
-	hasquality	1
+	has_quality	1
 	bulk_deed		1
 }
 
@@ -837,7 +837,7 @@ Element 0x2b73
 	material		40
 	skill		80
 	time			5
-	hasquality	1
+	has_quality	1
 	bulk_deed		1
 }
 
