--- a/099/pkg/skills/harvestingskills/lumberjacking/itemdesc.cfg
+++ b/099/pkg/skills/harvestingskills/lumberjacking/itemdesc.cfg
@@ -5,3 +5,67 @@ Item 0x1BDD
 	VendorBuysFor	1
 	Weight		1/2
 }
+
+Item 0x15020
+{
+	Name			oaklog
+	Graphic		0x1BDD
+	Color		0x1190
+	Desc			oak log
+	Weight		1/2
+}
+
+Item 0x15021
+{
+	Name			ashlog
+	Graphic		0x1BDD
+	Color		0x1191
+	Desc			ash log
+	Weight		1/2
+}
+
+Item 0x15022
+{
+	Name			yewlog
+	Graphic		0x1BDD
+	Color		0x1192
+	Desc			yew log
+	Weight		1/2
+}
+
+Item 0x15023
+{
+	Name			heartwoodlog
+	Graphic		0x1BDD
+	Color		0x1193
+	Desc			heartwood log
+	Weight		1/2
+}
+
+Item 0x15024
+{
+	Name			bloodwoodlog
+	Graphic		0x1BDD
+	Color		0x1194
+	Desc			bloodwood log
+	Weight		1/2
+}
+
+Item 0x15025
+{
+	Name			frostlog
+	Graphic		0x1BDD
+	Color		0x1195
+	Desc			frostwood log
+	Weight		1/2
+}
+
+Item 0x15026
+{
+	Name			sunwoodlog
+	Graphic		0x1BDD
+	Color		0x1196
+	Desc			sunwood log
+	Weight		1/2
+}
+
