--- a/trunk/099/pkg/combat/armor/itemdesc.cfg
+++ b/trunk/099/pkg/combat/armor/itemdesc.cfg
@@ -2863,7 +2863,7 @@ Armor 0x2fc5
 Armor 0x2fcb
 {
 	Name			FemaleLeafTunic
-	Desc			a female leaf tunic
+	Desc			a leaf tunic
 	AR			12
 	Coverage		Body
 	VendorSellsFor	120
@@ -2929,7 +2929,7 @@ Armor 0x2b74
 Armor 0x2b79
 {
 	Name			FemaleHideTunic
-	Desc			a female hide tunic
+	Desc			a hide tunic
 	AR			17
 	Coverage		Body
 	VendorSellsFor	240
