--- a/trunk/099/pkg/skills/harvestingskills/lumberjacking/itemdesc.cfg
+++ b/trunk/099/pkg/skills/harvestingskills/lumberjacking/itemdesc.cfg
@@ -10,7 +10,7 @@ Item 0x15020
 {
 	Name			oaklog
 	Graphic		0x1BDD
-	Color		0x1190
+	Color			1190
 	Desc			oak log
 	Weight		1/2
 }
@@ -19,7 +19,7 @@ Item 0x15021
 {
 	Name			ashlog
 	Graphic		0x1BDD
-	Color		0x1191
+	Color			1191
 	Desc			ash log
 	Weight		1/2
 }
@@ -28,7 +28,7 @@ Item 0x15022
 {
 	Name			yewlog
 	Graphic		0x1BDD
-	Color		0x1192
+	Color			1192
 	Desc			yew log
 	Weight		1/2
 }
@@ -37,7 +37,7 @@ Item 0x15023
 {
 	Name			heartwoodlog
 	Graphic		0x1BDD
-	Color		0x1193
+	Color			1193
 	Desc			heartwood log
 	Weight		1/2
 }
@@ -46,7 +46,7 @@ Item 0x15024
 {
 	Name			bloodwoodlog
 	Graphic		0x1BDD
-	Color		0x1194
+	Color			1194
 	Desc			bloodwood log
 	Weight		1/2
 }
@@ -55,7 +55,7 @@ Item 0x15025
 {
 	Name			frostwoodlog
 	Graphic		0x1BDD
-	Color		0x1195
+	Color			1195
 	Desc			frostwood log
 	Weight		1/2
 }
@@ -64,7 +64,7 @@ Item 0x15026
 {
 	Name			sunwoodlog
 	Graphic		0x1BDD
-	Color		0x1196
+	Color			1196
 	Desc			sunwood log
 	Weight		1/2
 }
